app.log
Watching for file changes with StatReloader
/Users/vladimirfilimonov/PycharmProjects/Microserv_1/Microserv_1/settings.py changed, reloading.
Watching for file changes with StatReloader
Not Found: /favicon.ico
Method Not Allowed (GET): /accounts/logout/
Method Not Allowed (GET): /accounts/logout/
Internal Server Error: /defects/1/
Traceback (most recent call last):
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 823, in __init__
    self.literal = float(var)
                   ~~~~~^^^^^
ValueError: could not convert string to float: 'obj._meta.get_field'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 839, in __init__
    self.literal = mark_safe(unescape_string_literal(var))
                             ~~~~~~~~~~~~~~~~~~~~~~~^^^^^
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/utils/functional.py", line 231, in wrapper
    return func(*args, **kwargs)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/utils/text.py", line 447, in unescape_string_literal
    raise ValueError("Not a string literal: %r" % s)
ValueError: Not a string literal: 'obj._meta.get_field'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/core/handlers/base.py", line 220, in _get_response
    response = response.render()
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/response.py", line 90, in rendered_content
    template = self.resolve_template(self.template_name)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/response.py", line 72, in resolve_template
    return select_template(template, using=self.using)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/loader.py", line 42, in select_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/backends/django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/loaders/base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 518, in parse
    raise self.error(token, e)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/loader_tags.py", line 299, in do_extends
    nodelist = parser.parse()
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 518, in parse
    raise self.error(token, e)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/loader_tags.py", line 234, in do_block
    nodelist = parser.parse(("endblock",))
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 518, in parse
    raise self.error(token, e)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/defaulttags.py", line 861, in do_for
    sequence = parser.compile_filter(bits[in_index + 1])
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 609, in compile_filter
    return FilterExpression(token, self)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 697, in __init__
    var_obj = Variable(var)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/template/base.py", line 844, in __init__
    raise TemplateSyntaxError(
    ...<2 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Variables and attributes may not begin with underscores: 'obj._meta.get_field'
/Users/vladimirfilimonov/PycharmProjects/Microserv_1/defects/views.py changed, reloading.
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Not Found: /favicon.ico
Not Found: /favicon.ico
Internal Server Error: /defects/
Traceback (most recent call last):
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/core/handlers/base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/views/generic/base.py", line 105, in view
    return self.dispatch(request, *args, **kwargs)
           ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/contrib/auth/mixins.py", line 73, in dispatch
    return super().dispatch(request, *args, **kwargs)
           ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/views/generic/base.py", line 144, in dispatch
    return handler(request, *args, **kwargs)
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/.venv/lib/python3.13/site-packages/django/views/generic/list.py", line 178, in get
    context = self.get_context_data()
  File "/Users/vladimirfilimonov/PycharmProjects/Microserv_1/defects/views.py", line 49, in get_context_data
    code for code, name in Status.choices if self.object.can_transition(code)
                                             ^^^^^^^^^^^
AttributeError: 'DefectListView' object has no attribute 'object'
/Users/vladimirfilimonov/PycharmProjects/Microserv_1/defects/views.py changed, reloading.
Watching for file changes with StatReloader
/Users/vladimirfilimonov/PycharmProjects/Microserv_1/defects/views.py changed, reloading.
Watching for file changes with StatReloader
/Users/vladimirfilimonov/PycharmProjects/Microserv_1/defects/views.py changed, reloading.
Watching for file changes with StatReloader
